--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
     <canvas id="canvas"></canvas>
 </body>
-<script src="./js/game.js" ></script>
+<script type="module" src="./js/game.js" ></script>
 </html>
