--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
     <canvas id="canvas"></canvas>
 </body>
 <script type="module" src="./js/game.js" ></script>
+<!-- <script src="./js/collosion.js"></script> -->
+<script src="./js/main.js"></script>
 </html>
