--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <canvas id="canvas"></canvas>
 </body>
 <script type="module" src="./js/game.js" ></script>
-<!-- <script src="./js/collosion.js"></script> -->
-<script src="./js/main.js"></script>
+<script src="./js/collosion.js"></script>
+<script type="module"  src="./js/main.js"></script>
 </html>
