--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prince of Persia</title>
+    <title>intro</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+ 
+    <!-- <script>
+      const sound=new Audio("./Sound/start.mpeg")
+     const audio = document.getElementById('audio');
+     const playButton = document.getElementById('audio-on');
+     const pauseButton = document.getElementById('audio-off');
+
+
+     playButton.addEventListener('click', () => {
+    sound.play(); 
+});
+
+     pauseButton.addEventListener('click', () => {
+    audio.pause(); 
+});
+
+    </script> -->
+
+   
+
+    
+    <div id="first">
+        <div><img src="./images/front.jpg" alt="main-page"></div>
+    </div>
+    <div id="button">START</a></div>
 </body>
-<script type="module" src="./js/game.js" ></script>
-<script src="./js/collosion.js"></script>
-<script type="module"  src="./js/main.js"></script>
+<script src="./js/script.js"></script>
 </html>
