--- a/End-Page.html
+++ b/End-Page.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="one">
-        <p>PROGRAMMED BY  :  ANKIT VARSHNEY, PRASHANT KUSHWAHA</p>
-        <P>SKILLS USE  : HTML, CSS, JAVA-SCRIPT.</P>
+        <p class="intro">PROGRAMMED BY  :  ANKIT VARSHNEY, PRASHANT KUSHWAHA</p>
+        <P class="intro">SKILLS USE  : HTML, CSS, JAVA-SCRIPT.</P>
     </div>
     
 </body>
