--- a/game_screen.html
+++ b/game_screen.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!--Box-->
+    <div class="box">
+     <p class="move"> PRESS <span>Z</span> TO SUMMON SWORD</p>
+     <p class="move"><span>SPACE</span> TO JUMP</p>
+     <p class="move">PRESS <span>X</span> TO FIGHT</p>
+     <p class="move"></p>
+        
+
+    </div>
+
+    <!--canvas-->
     <canvas id="canvas"></canvas>
 </body>
 <script type="module" src="./js/game.js" ></script>
