--- a/game_screen.html
+++ b/game_screen.html
@@ -7,14 +7,24 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+ <div class="health-bar" id="health-bar">
+   <p class ="health">HEALTH:</p> 
+   <img  class="heart" src="./images/heart.png" alt="heart">
+   <img  class="heart" src="./images/heart.png" alt="heart">
+   <img  class="heart" src="./images/heart.png" alt="heart">
+   <img  class="heart" src="./images/heart.png" alt="heart">
+   <img  class="heart" src="./images/heart.png" alt="heart">
+ </div>
     <!--Box-->
-    <div class="box">
-     <p class="move"> PRESS <span>Z</span> TO SUMMON SWORD</p>
-     <p class="move"><span>SPACE</span> TO JUMP</p>
-     <p class="move">PRESS <span>X</span> TO FIGHT</p>
-     <p class="move"></p>
-        
-
+    <div class="box" id ="box">
+        <p class="move"> PRESS <span>Z</span> TO SUMMON SWORD</p>
+        <p class="move"><span>SPACE</span> TO JUMP</p>
+        <p class="move">PRESS <span>X</span> TO FIGHT</p>
+    </div>
+    <div id="gameOverScreen" class="gameOverScreen">
+        <h1 class="head-2" id ="head-2">Game Over</h1>
+        <p id="para" >Press ENTER to Restart </p>
+        <!-- <button id="restartButton" class="restartbtn"> Restart</button> -->
     </div>
 
     <!--canvas-->
