chamged file name

--- a/End-Page.html
+++ b/End-Page.html
@@ -10,7 +10,7 @@ x<!DOCTYPE html>
         *{
           background-color: black;
         }
-        
+    /* css */
 #one{
     border: 50px solid rgb(114, 77, 45);
     height: 85vh;
