--- a/end-page.html
+++ b/end-page.html
@@ -3,7 +3,7 @@ x<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last-Page</title>
+    <title>Prince of Persia</title>
    
 
     <style>
@@ -67,4 +67,11 @@ a{
     </div>
     
 </body>
+<script>
+    document.addEventListener("keydown",(event)=>{
+        if(event.key=='Enter'){
+            window.location.href= "./index.html";
+        }
+    })
+</script>
 </html>
